--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="string_tips">
         温馨提示:如果列表中没有您要找的音乐,您可以输入音乐关键字后点击\"扫描\"按钮从手机内存中扫描音乐;
         如果您知道音乐在内存中的位置,您可以点击\"路径\"按钮,从文件浏览器中选取音乐。</string>
+    <string name="string_click_choose_music">点击选择音乐</string>
 
 
 </resources>
