--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,13 @@
     <string name="string_tips">
         温馨提示:如果列表中没有您要找的音乐,您可以输入音乐关键字后点击\"扫描\"按钮从手机内存中扫描音乐;
         如果您知道音乐在内存中的位置,您可以点击\"路径\"按钮,从文件浏览器中选取音乐。</string>
+    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
+    <string name="no_permissions">运行应用需要音频权限.\n\n当提示时请授予这些权限.</string>
     <string name="string_click_choose_music">点击选择音乐</string>
+
+    <string name="settings">设置</string>
+    <string name="help">帮助</string>
+    <string name="quit">退出</string>
 
 
 </resources>
